--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <title>RICK AND MORTY QUIZZ</title>
 </head>
 <body>
-<main>
+<main class="main">
     <h1>RICK AND MORTY</h1>
 
-    <hr>
+
     
     <p class="quest-left">Question 1 of 5 </p>
     <h2 class="questions">What letter comes after B ?</h2>
@@ -25,7 +25,7 @@
     </div>
 </main>
 
-<footer> 
+<footer class="footer"> 
     Code available on <a href="https://github.com/amandakibende/PROJECT-1-RICK-AND-MORTY-QUIZZ" target="_blank"  rel="noopener noreferrer"><img src="/image/github-icon.png"/></a>
     
 </footer>
