--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <div class="result">
         <h2 class="game-over"></h2>
-        <p class="total"></p>
+        <p id="end-sentence"></p>
     </div>
 
 <div class="remove-at-the-end">
