running ricka and morty

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <main class="main">
     <h1 class="title">RICK AND MORTY</h1>
 
-    <div class="result">
+    <div id="result">
         <h2 class="game-over"></h2>
         <p id="end-sentence"></p>
     </div>
@@ -31,8 +31,9 @@
 </main>
 
 <footer class="footer"> 
-    Code available on <a href="https://github.com/amandakibende/PROJECT-1-RICK-AND-MORTY-QUIZZ" target="_blank"  rel="noopener noreferrer"><img src="/image/github-icon.png"/></a>
-    
+   <div id="rick"></div>
+   <p>Code available on <a href="https://github.com/amandakibende/PROJECT-1-RICK-AND-MORTY-QUIZZ" target="_blank"  rel="noopener noreferrer"><img src="/image/github-icon.png"/></a></p> 
+
 </footer>
 
     <script src="/index.js"></script>
